[package]
name = "pestr"
version = "0.2.0"
authors = ["Andrew Dawson <ajdawson@acm.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.0", features = ["cargo", "derive"] }
dirs = "4"
regex = "1"
serde = {version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
shellexpand = "2.1"
toml = "0.5.9"
